updated profile picture

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="profile-section">
           <div class="profile-image">
             <img
-              src="./assets/profile.jpg"
+              src="./assets/profile.png"
               alt="Nesibu Aliyu"/>
             <div class="profile-ring"></div>
           </div>
