--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           <p class="section-subtitle">Stay updated on legal insights and professional updates</p>
         </div>
         <div class="social-links">
-          <a href="#" class="social-link facebook">
+          <a href="https://www.facebook.com/share/1Ek9cra9sf/" class="social-link facebook">
             <i class="fab fa-facebook-f"></i>
             <span>Facebook</span>
           </a>
@@ -288,11 +288,11 @@
             <i class="fab fa-twitter"></i>
             <span>Twitter</span>
           </a>
-          <a href="#" class="social-link linkedin">
+          <a href="https://www.linkedin.com/in/nesibu-aliyu-1b9364107/" class="social-link linkedin">
             <i class="fab fa-linkedin-in"></i>
             <span>LinkedIn</span>
           </a>
-          <a href="#" class="social-link instagram">
+          <a href="https://www.instagram.com/joinnesibu/" class="social-link instagram">
             <i class="fab fa-instagram"></i>
             <span>Instagram</span>
           </a>
