--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
               <div class="contact-details">
                 <h3>Office</h3>
                 <p>Nur Building, Office No. 03</p>
-                <a href="#" class="map-link">
+                <a href="https://maps.app.goo.gl/AW5FfbTvcYCRpHzC7" class="map-link">
                   <i class="fas fa-external-link-alt"></i>
                   View on Map
                 </a>
