added telegram link

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             <i class="fab fa-instagram"></i>
             <span>Instagram</span>
           </a>
-          <a href="#" class="social-link telegram">
+          <a href="https://t.me/Lawyernesibu" class="social-link telegram">
             <i class="fab fa-telegram"></i>
             <span>Telegram</span>
           </a>
