--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href="#home" class="nav-link">Services</a></li>
         <li><a href="#about" class="nav-link">Experience</a></li>
         <li><a href="#contact" class="nav-link">Contact</a></li>
+        <li><a href="https://maps.app.goo.gl/AW5FfbTvcYCRpHzC7" class="nav-link">Address</a></li>
       </ul>
       <div class="hamburger">
         <span class="bar"></span>
